# spg_hacking_basic

./: .gitignore  CMakeLists.txt  README.md  ShortCut.bat  cmakeGemToTmp.bat
cczAssist/: CMakeLists.txt  cczAssist.jucer
cczAssist/Builds/VisualStudio2010/: cczAssist.vcxproj  cczAssist.vcxproj.filters  resources.rc
cczAssist/Builds/VisualStudio2010/lang/: zh_CN.json
cczAssist/Builds/VisualStudio2010/settings/: layout.json
cczAssist/Builds/VisualStudio2013/: cczAssist.vcxproj  cczAssist.vcxproj.filters
cczAssist/JuceLibraryCode/: AppConfig.h  JuceHeader.h  modules.txt
cczAssist/JuceLibraryCode/modules/juce_audio_basics/effects/: juce_IIRFilter.cpp
cczAssist/JuceLibraryCode/modules/juce_graphics/native/: juce_win32_Fonts.cpp
cczAssist/JuceLibraryCode/modules/juce_gui_basics/native/: juce_mac_NSViewComponentPeer.mm  juce_mac_Windowing.mm  juce_win32_Windowing.cpp
cczAssist/JuceLibraryCode/modules/juce_gui_extra/: juce_gui_extra.cpp
cczAssist/JuceLibraryCode/modules/juce_gui_extra/misc/: juce_WebBrowserComponent.h
cczAssist/JuceLibraryCode/modules/juce_gui_extra/native/: juce_mac_WebBrowserComponent.mm  juce_win32_WebBrowserComponent.cpp
cczAssist/Source/: InputStringConverter.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainTabComponent.h  SaveControlPanelComp.h  Source.cmake  WCATabPageComp.h  cczAssistConfig.h  cczAssistLibLoader.h  memModRecComp.h  resources.rc
libAssist/src/: CMakeLists.txt  CczAssit.cpp  CczAssit.h  CczDataStructs.h
libIPCO/src/: APIHook.cpp  APIHook.h  CMakeLists.txt  IPHook.cpp  IPHook.h  IPHookMain.cpp  libIPCO.def
libMemDO/src/: CMakeLists.txt  MemDO.cpp  MemDO.h  libMemDO.def
pvztest/: CMakeLists.txt
pvztest/src/: CMakeLists.txt  pvztest_main.cpp
